Used the EQS to test distance to SCharacters.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,7 +26,6 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -49,8 +48,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.30-13.52.41
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.30-14.44.15
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3771,13 +3770,15 @@ TargetPoint.Cooking=True
 TargetPoint.Replication=True
 TargetPoint.Input=True
 TargetPoint.Actor=True
+EnvQueryTest_Distance.Test=True
+EnvQueryTest_Distance.Distance=True
+EnvQueryTest_Distance.Filter=True
+EnvQueryTest_Distance.Score=True
+EnvQueryTest_Distance.Preview=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
-OpenAssetsAtExit=/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation
-OpenAssetsAtExit=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns.EnvQueryContext_BotSpawns
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4078,7 +4079,9 @@ EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSl
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
+RecentlyPlaced=/Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
@@ -4091,34 +4094,32 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
-RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
-RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem1=/Game/Blueprints/GameModes/NewBlueprint
-MRUItem2=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem4=/Game/UI/WBP_AmmoInfo
-MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem6=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem7=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem8=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem9=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem10=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem11=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem12=/Game/Powerups/c++/NewBlueprint
-MRUItem13=/Game/Powerups/c++/bpwoe
-MRUItem14=/Game/Powerups/c++/bppower
-MRUItem15=/Game/Powerups/c++/bppow
-MRUItem16=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem17=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem18=/Game/TrackerBot/BP_TrackerBot
-MRUItem19=/Game/Powerups/BP_PowerupBase
+MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem3=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem4=/Game/Blueprints/GameModes/NewBlueprint
+MRUItem5=/Game/UI/WBP_AmmoInfo
+MRUItem6=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem7=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem8=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem9=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem10=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem11=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem12=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem13=/Game/Powerups/c++/NewBlueprint
+MRUItem14=/Game/Powerups/c++/bpwoe
+MRUItem15=/Game/Powerups/c++/bppower
+MRUItem16=/Game/Powerups/c++/bppow
+MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem18=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem19=/Game/TrackerBot/BP_TrackerBot
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4188,6 +4189,7 @@ MRUItem19=/Game/Powerups/BP_PowerupBase
 /Game/Powerups/c++/BP_SuperSpeedPowerup2.BP_SuperSpeedPowerup2=0
 /Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy=0
 /Game/Powerups/BP_HealthRegenerationPowerup2.BP_HealthRegenerationPowerup2=0
+/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
