Now the query system spawns a tracker bot at a minimum distance of 200 units.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,7 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 PlayNumberOfClients=2
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -3779,6 +3780,8 @@ EnvQueryTest_Distance.Preview=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
+OpenAssetsAtExit=/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4100,10 +4103,10 @@ RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
 MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem3=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
 MRUItem4=/Game/Blueprints/GameModes/NewBlueprint
 MRUItem5=/Game/UI/WBP_AmmoInfo
 MRUItem6=/Game/Blueprints/Weapons/BP_Rifle
