Wrong method assigned in timer.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.30-14.44.15
+CoopGame.TimeStamp=2020.04.30-19.00.52
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3778,8 +3778,6 @@ EnvQueryTest_Distance.Preview=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
-OpenAssetsAtExit=/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4077,6 +4075,10 @@ PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 BP_EQSTestingPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
+EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
+EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
+EnvQueryNode="\"Object.Generator.ProjectionData\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -4101,8 +4103,8 @@ RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem1=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
 MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
 MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
 MRUItem4=/Game/Blueprints/GameModes/NewBlueprint
