tick configuration wasn't placed on the contructor.

--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/maps/VoidMap.VoidMap
 GameDefaultMap=/Game/maps/VoidMap.VoidMap
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
