--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,8 +47,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.02-14.11.16
-CoopGame.LastCompileMethod=External
+CoopGame.TimeStamp=2020.05.02-14.48.35
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3777,10 +3777,16 @@ EnvQueryTest_Distance.Preview=True
 Actor.TransformCommon=True
 Actor.Replication=True
 Actor.Actor=True
+BP_TestGameState_C.Tick=True
+BP_TestGameState_C.GameState=True
+BP_TestGameState_C.Replication=True
+BP_TestGameState_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3813,7 +3819,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameModes
+ContentBrowserTab1.SelectedPaths=/Classes_Game/CoopGame/Public
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4106,26 +4112,26 @@ RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem4=/Game/Blueprints/GameModes/NewBlueprint
-MRUItem5=/Game/UI/WBP_AmmoInfo
-MRUItem6=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem7=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem8=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem9=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem10=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem11=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem12=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem13=/Game/Powerups/c++/NewBlueprint
-MRUItem14=/Game/Powerups/c++/bpwoe
-MRUItem15=/Game/Powerups/c++/bppower
-MRUItem16=/Game/Powerups/c++/bppow
-MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem18=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem19=/Game/TrackerBot/BP_TrackerBot
+MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem2=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem4=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem5=/Game/Blueprints/GameModes/NewBlueprint
+MRUItem6=/Game/UI/WBP_AmmoInfo
+MRUItem7=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem8=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem9=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem10=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem11=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem12=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem13=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem14=/Game/Powerups/c++/NewBlueprint
+MRUItem15=/Game/Powerups/c++/bpwoe
+MRUItem16=/Game/Powerups/c++/bppower
+MRUItem17=/Game/Powerups/c++/bppow
+MRUItem18=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem19=/Game/Blueprints/Characters/BP_TargetDummy
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
