--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,8 +47,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.02-14.48.35
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.02-17.16.26
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3783,10 +3783,8 @@ BP_TestGameState_C.Replication=True
 BP_TestGameState_C.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3819,7 +3817,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/CoopGame/Public
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
