Fixed blueprint error when trying to add score to a self destruct bot.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,9 +26,7 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNetDedicated=True
-PlayNumberOfClients=2
+NewWindowPosition=(X=655,Y=323)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -50,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.02-20.44.41
+CoopGame.TimeStamp=2020.05.02-21.08.22
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3788,7 +3786,6 @@ BP_TestGameState_C.Actor=True
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4116,26 +4113,26 @@ RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem2=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem4=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem5=/Game/Blueprints/GameModes/NewBlueprint
-MRUItem6=/Game/UI/WBP_AmmoInfo
-MRUItem7=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem8=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem9=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem10=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem11=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem12=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem13=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem14=/Game/Powerups/c++/NewBlueprint
-MRUItem15=/Game/Powerups/c++/bpwoe
-MRUItem16=/Game/Powerups/c++/bppower
-MRUItem17=/Game/Powerups/c++/bppow
-MRUItem18=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem19=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem2=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem3=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem4=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem5=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem6=/Game/Blueprints/GameModes/NewBlueprint
+MRUItem7=/Game/UI/WBP_AmmoInfo
+MRUItem8=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem9=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem10=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem11=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem12=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem13=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem14=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem15=/Game/Powerups/c++/NewBlueprint
+MRUItem16=/Game/Powerups/c++/bpwoe
+MRUItem17=/Game/Powerups/c++/bppower
+MRUItem18=/Game/Powerups/c++/bppow
+MRUItem19=/Game/Blueprints/Characters/BP_PlayerPawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4206,6 +4203,7 @@ MRUItem19=/Game/Blueprints/Characters/BP_TargetDummy
 /Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy=0
 /Game/Powerups/BP_HealthRegenerationPowerup2.BP_HealthRegenerationPowerup2=0
 /Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
