Created a new level.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/VoidMap
+LastLevel=/Game/Level/maps/Wimbledon
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.02-21.08.22
@@ -3820,9 +3820,68 @@ GeomModifier_Extrude.Settings=True
 Actor.Surface Materials=True
 Actor.Geometry=True
 Actor.Surface Properties=True
+MapBuildDataRegistry.Lighting=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+Actor.Rendering=True
+Actor.Input=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.RayTracing=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3907,8 +3966,10 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/VoidMap
-MRUItem1=/Game/maps/VoidMap
+MRUItem0=/Game/Level/maps/Wimbledon
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem3=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
@@ -4050,7 +4111,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4134,10 +4195,16 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
@@ -4151,33 +4218,28 @@ RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
 RecentlyPlaced=/Game/Blueprints/AI/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
-RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
-RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
-RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
-RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/VoidMap
-MRUItem1=/Game/Level/Materials/MI_BlockoutSimple_Inst
-MRUItem2=/Game/Level/Materials/M_BlockoutSimple
-MRUItem3=/Game/Level/Materials/M_BasicBox
-MRUItem4=/Game/Level/Materials/MF_WorldUVs
-MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem6=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem7=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem8=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem9=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem10=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem11=/Game/Blueprints/GameModes/NewBlueprint
-MRUItem12=/Game/UI/WBP_AmmoInfo
-MRUItem13=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem14=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem15=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem16=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem17=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem18=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem19=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem0=/Game/Level/maps/Wimbledon
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem3=/Game/Level/Materials/MI_BlockoutSimple_Inst
+MRUItem4=/Game/Level/Materials/M_BlockoutSimple
+MRUItem5=/Game/Level/Materials/M_BasicBox
+MRUItem6=/Game/Level/Materials/MF_WorldUVs
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem9=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem10=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem12=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem13=/Game/Blueprints/GameModes/NewBlueprint
+MRUItem14=/Game/UI/WBP_AmmoInfo
+MRUItem15=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem16=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem17=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem18=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem19=/Game/Powerups/BP_HealthRegenerationPowerup2
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4253,6 +4315,7 @@ MRUItem19=/Game/Powerups/c++/BP_SuperSpeedPowerup2
 /Game/Level/Materials/M_BlockoutSimple.M_BlockoutSimple=0
 /Game/Level/Materials/M_BasicBox.M_BasicBox=0
 /Game/Level/Materials/MF_WorldUVs.MF_WorldUVs=0
+/Game/Level/maps/Blockout_P_BuiltData.Blockout_P_BuiltData=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -4294,7 +4357,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
