Added a nav mesh volume to the Blockout map.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/Wimbledon
+LastLevel=/Game/Level/maps/Blockout_P
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.02-21.08.22
@@ -3966,9 +3966,9 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/Wimbledon
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem0=/Game/Level/maps/Blockout_P
+MRUItem1=/Game/Level/maps/Wimbledon
+MRUItem2=/Game/Level/maps/VoidMap
 MRUItem3=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
@@ -4111,7 +4111,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4198,15 +4198,15 @@ GeomModifier_Extrude="\"Object.Settings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy;
@@ -4220,9 +4220,9 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/Wimbledon
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem0=/Game/Level/maps/Blockout_P
+MRUItem1=/Game/Level/maps/Wimbledon
+MRUItem2=/Game/Level/maps/VoidMap
 MRUItem3=/Game/Level/Materials/MI_BlockoutSimple_Inst
 MRUItem4=/Game/Level/Materials/M_BlockoutSimple
 MRUItem5=/Game/Level/Materials/M_BasicBox
@@ -4516,7 +4516,7 @@ bDrawGrid=False
 PrimType=1
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 DecalSize_PreserveScaleRatio=True
 
 [/Script/UnrealEd.FbxImportUI]
